static typing and working file generation
